--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -14,20 +14,14 @@
             android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="8dp" android:layout_marginEnd="8dp">
-        <ImageView
-                android:src="@drawable/devnet"
-                android:layout_width="390dp"
-                android:layout_height="108dp" android:id="@+id/imageView3"
-        />
+
+
         <TextView
-                android:id="@+id/text_gallery"
+                android:text="CARRERAS UTEC"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:textAlignment="center"
-                android:textSize="20sp"
-        />
+                android:layout_height="wrap_content" android:id="@+id/textView2"/>
+        <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:id="@+id/ListViewid"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
